# netology_system-administration

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  backup_script.sh  check_web_server.sh  crontab  haproxy_1  haproxy_2  keepalived.conf  main.tf  makefile  pyproject.toml  requirements-test.txt
tests/: conftest.py  pytest.ini
tests/e2e/: test_user_registration_flow.py
tests/fixtures/: test_data.py
tests/fixtures/data/: users.json
tests/integration/: test_database_integration.py
tests/performance/: test_performance.py
tests/unit/: test_math_operations.py  test_user_service.py
