[tool.poetry]
name = "netology-system-administration"
version = "0.1.0"
description = "Performing practical tasks at the Netology training center. System Administration course."
authors = ["Alexander Nayden <alexander.nayden@gmail.com>"]
readme = "README.md"
packages = [{ include = "*", from = "." }]


[tool.poetry.dependencies]
python = ">=3.12, <4.0"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest = "^7.0"
pre-commit = "^3.0"

# ========== CODE FORMATTING ==========

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
# Файлы и папки, которые Black должен игнорировать
/(
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ========== IMPORT SORTING ==========

[tool.isort]
# Синхронизация с Black
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["*"]
force_sort_within_sections = true
lines_after_imports = 2
combine_as_imports = true

# ========== CODE LINTING ==========

[tool.flake8]
# Настройки, совместимые с Black
max-line-length = 88
extend-ignore = """
# Игнорируем правила, которые конфликтуют с Black
E203,  # пробел перед ':' (Black его ломает)
W503,  # разрыв линии перед оператором (устарело)
E501,  # длина строки (проверяем по max-line-length)
"""
exclude = """
    .git,
    __pycache__,
    .venv,
    build,
    dist,
    .mypy_cache,
    .pytest_cache,
    migrations,
    *.egg-info
"""
per-file-ignores = """
# Игнорируем D100-D107 для тестовых файлов
tests/*: D100,D101,D102,D103,D104,D105,D106,D107
"""
# Дополнительные плагины (опционально)
extend-select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "FIX", # flake8-fixme
]

# ========== TYPE CHECKING ==========

[tool.mypy]
# Строгая, но практичная настройка mypy
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Исключения для тестов и миграций
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*migrations*",
    "*test*"
]
disallow_untyped_defs = false
disallow_untyped_calls = false

# Игнорируем сторонние библиотеки, которые не имеют типов
[[tool.mypy.overrides]]
module = [
    "django.*",
    "sqlalchemy.*",
    # добавьте другие библиотеки без типов при необходимости
]
ignore_missing_imports = true

# ========== TESTING ==========

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=my_project",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"