[tool.poetry]
name = "netology-system-administration"
version = "0.1.0"
description = "Performing practical tasks at the Netology training center. System Administration course."
authors = ["Alexander Nayden <alexander.nayden@gmail.com>"]
readme = "README.md"
packages = [{ include = "*", from = "." }]


[tool.poetry.dependencies]
python = ">=3.12, <4.0"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest = "^7.0"
pre-commit = "^3.0"
mypy = "^1.18.2"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
pytest-mock = "^3.15.1"
pytest-watch = "^4.2.0"
coverage = "^7.11.3"
requests-mock = "^1.12.1"
freezegun = "^1.5.5"
myapp = "^0.1.dev0"
psutil = "^7.1.3"
selenium = "^4.38.0"


# ========== CODE FORMATTING ==========

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
# Файлы и папки, которые Black должен игнорировать
/(
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ========== IMPORT SORTING ==========

[tool.isort]
# Синхронизация с Black
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["*"]
force_sort_within_sections = true
lines_after_imports = 2
combine_as_imports = true
verbose = true
# show_diff = false  # Можно отключить если слишком много текста

# ========== TYPE CHECKING ==========

[tool.mypy]
# Строгая, но практичная настройка mypy
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Исключения для тестов и миграций
[[tool.mypy.overrides]]
module = [
    "tests.*"  # Только для тестов, это всегда работает
]
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "django.*",
    "sqlalchemy.*"
]
ignore_missing_imports = true

# ========== TESTING ==========

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=my_project",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"